--- a/package.xml
+++ b/package.xml
@@ -40,8 +40,11 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>boost</build_depend>
   <build_depend>atlas_msgs</build_depend>
   <build_depend>rospy</build_depend>
+
+  <run_depend>boost</run_depend>
   <run_depend>atlas_msgs</run_depend>
   <run_depend>rospy</run_depend>
 
